<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudCon</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="login_button">Login</string>
    <string name="login">Username</string>
    <string name="pass">Password</string>
    <string name="content">http://www.google.com</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_refresh">Refresh</string>
    <string name="about">PRACA MAGISTERSKA</string>
    <string name="author">Autor: Maciej Manczyk</string>
    <string name="promotor">Promotor: dr inż. Michał Maćkowski</string>
    <string name="about_app">Aplikacja dostarczająca odpowiedni kontent w zależności od lokalizacji za pomocą BLE Estimote.</string>

</resources>
